--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,700,900">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <meta name="description" content="Nigel Jones Associates for advice on strategies for rail freight and rail freight planning">
-    <meta name="keywords" content="rail,freight,industry,consultancy,market,research,strategy,planning,railfreight">
-    <meta name="google-site-verification" content="2K1qk4ZR5_cJCuFl7UuhBQjWcC74W5T-2HpT461T2BE" />
-    <meta name="google-site-verification" content="jzz0R4BjJo_8pj1TuzqCSUs_e4E8p5bGb9Gg814Zqf0" />
-    <title>Nigel Jones Associates</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but Nigel Jones Associates doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,700,900" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1.0" name="viewport">
+  <link href="<%= BASE_URL %>favicon.ico" rel="icon">
+  <meta content="Nigel Jones Associates for advice on strategies for rail freight and rail freight planning"
+        name="description">
+  <meta content="rail,freight,industry,consultancy,market,research,strategy,planning,railfreight" name="keywords">
+  <meta content="2K1qk4ZR5_cJCuFl7UuhBQjWcC74W5T-2HpT461T2BE" name="google-site-verification"/>
+  <meta content="jzz0R4BjJo_8pj1TuzqCSUs_e4E8p5bGb9Gg814Zqf0" name="google-site-verification"/>
+  <title>Nigel Jones Associates</title>
+</head>
+<body>
+<noscript>
+  <strong>We're sorry but Nigel Jones Associates doesn't work properly without JavaScript enabled. Please enable it to
+    continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
